--- a/src/projectCss/Home.css
+++ b/src/projectCss/Home.css
@@ -8,51 +8,133 @@ body{
     overflow-x: hidden;
 }
 .page-1{
-    background-color: black;
+    /* background-color: black; */
     width: 100vw;
     height: 100vh;
 }
 .navbar{
     width: 100vw;
     height: 3rem;
-    background-color: lightcoral;
+    background-color: rgba(255,255,255,0.05);
+    position: fixed;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: row;
 }
-.company-name-text{
-    width: 100vw;
-    height: calc(100vh - 3rem);
-    background-color: lightgreen;
+.logo-space{
+    width: 5vw;
+    height: 100%;
+    /* background-color: rosybrown; */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.fm-tech-logo{
+    width: 50%;
+    height: 100%;
+}
+.blank-space{
+    width: 83vw;
+    height: 100%;
+    /* background-color: lightcoral; */
+}
+.navigation-options{
+    width: 12vw;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    color: white;
+}
+.company-name-text{
+    width: 100vw;
+    height: 100vh;
     font-size: 50px;
+    z-index: 11;
+    color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .page-2{
     width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
+    background-image: linear-gradient(#060d1b, #009cbb);
 }
-.wallet{
-    background-color: lightpink;
+.wallet-section{
+    /* background-color: lightpink; */
     height: 100vh;
     width: calc(100vw / 3);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 10px;
 }
-.phone-case{
+.wallet-image{
+    width: 15vw;
+    height: 15vw;
     background-color: lightblue;
-    height: 100vh;
-    width: calc(100vw / 3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border-radius: 50%;
 }
-.key-chain{
-    background-color: lightyellow;
+.phone-case-section{
+    /* background-color: lightblue; */
     height: 100vh;
     width: calc(100vw / 3);
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+.phone-case-image{
+    width: 15vw;
+    height: 15vw;
+    background-color: lightblue;   
+    border-radius: 50%;
+}
+.key-chain-section{
+    /* background-color: lightyellow; */
+    height: 100vh;
+    width: calc(100vw / 3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+.key-chain-image{
+    width: 15vw;
+    height: 15vw;
+    background-color: lightblue;
+    border-radius: 50%;
+}
+.product-text{
+    color: white;
+    font-size: 2.5rem;
+}
+.buy-now-button{
+    width: fit-content;
+    height: fit-content;
+    color: white;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 8px;
+    padding: 15px;
+    font-size: 2rem;
+}
+.bg-image{
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
 }
