--- a/src/projectCss/Home.css
+++ b/src/projectCss/Home.css
@@ -1,7 +1,6 @@
 :root{
     font-family: 'Montserrat', sans-serif;
 }
-
 body{
     margin: 0;
     padding: 0;
@@ -21,7 +20,33 @@ body{
     top: 0;
     display: flex;
     flex-direction: row;
+    z-index: 999;
 }
+.about-button{
+    font-size: 1.2rem;
+}
+.about-button:hover{
+    color: #0094B2;
+    cursor: pointer;
+}
+.contact-button{
+    font-size: 1.2rem;
+}
+.contact-button:hover{
+    color: #0094B2;
+    cursor: pointer;
+}
+.cart-icon{
+    width: fit-content;
+    height: 80%;
+}
+.cart-icon:hover{
+    cursor: pointer;
+    width: 22%;
+    height: 75%;
+
+}
+
 .logo-space{
     width: 5vw;
     height: 100%;
@@ -34,16 +59,19 @@ body{
     width: 50%;
     height: 100%;
 }
+.fm-tech-logo:hover{
+    cursor: pointer;
+}
 .blank-space{
-    width: 83vw;
+    width: 82vw;
     height: 100%;
     /* background-color: lightcoral; */
 }
 .navigation-options{
-    width: 12vw;
+    width: 13vw;
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 25px;
     align-items: center;
     color: white;
 }
@@ -59,6 +87,25 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.discover-button{
+    width: fit-content;
+    height: fit-content;
+    color: black;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255, 0.3);
+    
+    border: 1px solid white;
+    border-radius: 8px;
+    padding: 15px;
+    font-size: 3rem;
+}
+.discover-button:hover{
+    background-color: rgb(255, 255, 255, 0.1);
+    color: white;
 }
 .page-2{
     width: 100vw;
@@ -83,6 +130,9 @@ body{
     background-color: lightblue;
     border-radius: 50%;
 }
+.wallet-image:hover{
+    cursor: pointer;
+}
 .phone-case-section{
     /* background-color: lightblue; */
     height: 100vh;
@@ -99,6 +149,9 @@ body{
     background-color: lightblue;   
     border-radius: 50%;
 }
+.phone-case-image:hover{
+    cursor: pointer;
+}
 .key-chain-section{
     /* background-color: lightyellow; */
     height: 100vh;
@@ -114,6 +167,9 @@ body{
     height: 15vw;
     background-color: lightblue;
     border-radius: 50%;
+}
+.key-chain-image:hover{
+    cursor: pointer;
 }
 .product-text{
     color: white;
@@ -133,6 +189,11 @@ body{
     padding: 15px;
     font-size: 2rem;
 }
+.buy-now-button:hover{
+    background-color: white;
+    color: black;
+}
+
 .bg-image{
     z-index: 10;
     width: 100vw;
