--- a/src/projectCss/Home.css
+++ b/src/projectCss/Home.css
@@ -6,6 +6,25 @@ body{
     padding: 0;
     overflow-x: hidden;
 }
+/* firefox scroll bar*/
+html{
+    scrollbar-width: thin;
+    scrollbar-color: #ADD8E6 black;
+}
+
+/* other browsers scroll bar */
+html::-webkit-scrollbar{
+    width: 0.4166666666666667vw;
+}
+html::-webkit-scrollbar-thumb{
+    background-color: blue;
+}
+/* html::-webkit-scrollbar-thumb:hover{
+    background-color: #0256ffdc;
+} */
+html::-webkit-scrollbar-track{
+    background-color: black;
+}
 .page-1{
     /* background-color: black; */
     width: 100vw;
@@ -22,6 +41,15 @@ body{
     flex-direction: row;
     z-index: 999;
     justify-content: space-between;
+    box-sizing: border-box;
+}
+.navigation-options{
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+    align-items: center;
+    color: white;
 }
 .about-button{
     font-size: 1.2rem;
@@ -40,6 +68,7 @@ body{
 .cart-icon{
     width: fit-content;
     height: 80%;
+    margin-right: 10px;
 }
 .cart-icon:hover{
     cursor: pointer;
@@ -54,6 +83,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
+    /* position: fixed; */
+    /* position: absolute; */
 }
 .fm-tech-logo{
     width: 3rem;
@@ -66,15 +98,6 @@ body{
     width: 80vw;
     height: 100%;
     /* background-color: lightcoral; */
-}
-.navigation-options{
-    width: fit-content;
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-    align-items: center;
-    color: white;
-    margin-right: 10px;
 }
 .company-name-text{
     width: 100vw;
