--- a/src/projectCss/Home.css
+++ b/src/projectCss/Home.css
@@ -176,6 +176,8 @@ html::-webkit-scrollbar-track{
     height: 10vh;
     background-color: rgba(255,255,255,0.02);
     z-index: 12;
+    position: absolute;
+    bottom: 0;
 }
 .company-info-text{
     font-size: 2rem;
